--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,19 +4,19 @@
     "proxy": "http://localhost:5000/",
     "private": true,
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^32.0.0",
-        "@ckeditor/ckeditor5-react": "^4.0.0",
-        "@testing-library/jest-dom": "^5.16.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0",
-        "axios": "^0.25.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-icons": "^4.3.1",
-        "react-router-dom": "^6.2.1",
-        "react-scripts": "5.0.0",
-        "uuid": "^8.3.2",
-        "web-vitals": "^2.1.4"
+        "@ckeditor/ckeditor5-build-classic": "^44.3.0",
+        "@ckeditor/ckeditor5-react": "^9.5.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "axios": "^1.10.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-icons": "^5.5.0",
+        "react-router-dom": "^7.6.3",
+        "react-scripts": "^5.0.1",
+        "uuid": "^11.1.0",
+        "web-vitals": "^5.0.3"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -41,6 +41,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {}
+    }
 }
